<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="24dp"
    android:paddingBottom="12dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:layout_margin="16dp"
    android:background="@drawable/dialog_background">


    <TextView
        android:id="@+id/rename_note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rename_note"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rename_note_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_title"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rename_note_title"
        app:layout_constraintTop_toBottomOf="@id/rename_note_title"
        android:layout_marginTop="12dp"
        app:startIconDrawable="@drawable/ic_round_edit_24"
        app:startIconTint="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="200"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/rename_note_save_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/pink"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rename_note_edit_text"
        app:layout_constraintTop_toBottomOf="@id/rename_note_edit_text" />

    <Button
        android:id="@+id/rename_note_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/rename_note_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/cancel"
        android:textColor="@color/pink"
        android:textStyle="bold"
        android:textAllCaps="false"/>


    <LinearLayout
        android:id="@+id/rename_note_saved_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="gone"
        android:layout_marginBottom="12dp">
        <ImageView
            android:id="@+id/rename_note_saved_drawable"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_round_edit_24"
            app:tint="@color/text_color"
            android:layout_margin="6dp"/>
        <TextView
            android:layout_margin="6dp"
            android:id="@+id/rename_note_saved_text"
            android:text="@string/saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>