<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_list_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".list.NoteListFragment">

    <ImageButton
        android:id="@+id/edit_folder_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:background="@drawable/ripple_background"
        app:tint="@color/text_color"
        android:contentDescription="@string/open_edit_folder_details_menu"/>

    <ImageButton
        android:id="@+id/logoButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginStart="@dimen/side_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo"
        android:background="@android:color/transparent"
        android:contentDescription="@string/application_logo"/>

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/confetti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spacer"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:textSize="48sp"
        android:layout_marginTop="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginStart="@dimen/side_margin"
        app:layout_constraintTop_toBottomOf="@id/logoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        tools:text="All Notes"/>

    <View
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginStart="@dimen/side_margin"/>

    <ImageButton
        android:id="@+id/folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        android:src="@drawable/ic_folder"
        android:background="@drawable/ripple_background"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="12dp"
        app:tint="@color/text_color"
        android:contentDescription="@string/open_list_of_folders"/>

    <ImageButton
        android:id="@+id/list_card_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ripple_background"
        android:src="@drawable/ic_abstract_card_item"
        app:layout_constraintBottom_toBottomOf="@+id/folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/folder"
        app:tint="@color/text_color"
        android:contentDescription="@string/switch_between_card_and_list_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/folder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginTop="24dp"
        tools:listitem="@layout/note_list_card_item"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:visibility="gone"
        android:visibility="visible"
        android:clipToPadding="false"
        android:paddingBottom="100dp"/>

    <TextView
        android:id="@+id/no_notes_are_saved_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/no_notes_are_saved_in_this_folder"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/folder"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_notes_are_saved_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/no_notes_are_saved_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/click_the_circle_button_below_n_to_write_a_new_note"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        tools:visibility="visible"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_note_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/side_margin"
        app:fabSize="normal"
        android:contentDescription="@string/create_new_note"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/folder_tray"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/folder_tray_background"
        tools:visibility="gone"
        android:visibility="gone">
        <include layout="@layout/folder_tray_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>